# NetEngine

./: .gitignore  CMakeLists.txt  Net.sln
EasyTcpClient/: EasyTcpClient.vcxproj  EasyTcpClient.vcxproj.filters
EasyTcpClient/Source/: CMakeLists.txt  client.cpp  clinet.cpp  easyTcpClient.cpp  easyTcpClient.h  messageHeader.h
EasyTcpServer/: EasyTcpServer.vcxproj  EasyTcpServer.vcxproj.filters
EasyTcpServer/Source/: CMakeLists.txt  server.cpp
helloSocket/: helloSocket.vcxproj  helloSocket.vcxproj.filters
helloSocket/Source/: Test.cpp
